# serializer version: 1
# name: test_load_cellpack[bcif]
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[bcif].1
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load_cellpack[bcif].2
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load_cellpack[bcif].3
  [[ 4.5e+00 -5.0e+00 -8.4e-02]
   [-8.0e+00  4.7e+00  8.7e+00]
   [ 6.2e-01  7.4e+00  7.4e-02]
   [ 7.5e+00  2.2e+00 -2.8e-01]
   [-4.6e+00  1.1e+01  2.6e-01]
   [-4.6e+00 -6.8e+00 -1.4e+00]
   [-2.2e-01 -6.9e+00  5.5e-03]
   [-1.4e+01 -1.2e+01 -1.2e+00]
   [ 2.0e+00  6.4e+00  3.1e-01]
   [ 6.2e-01 -7.0e-01  8.6e-01]
   [-5.7e+00 -8.5e+00 -9.2e-01]
   [-3.4e-01 -3.3e+00  4.7e-01]
   [-2.5e+00  4.6e+00 -3.4e+00]
   [-2.2e+00  5.1e+00  7.0e-02]
   [-3.1e+00 -6.3e+00  2.9e-01]
   [ 2.2e-01 -4.0e+00 -1.0e-01]
   [-1.1e+01 -3.0e+00 -1.5e+00]
   [-1.8e+00 -3.8e+00 -9.8e-01]
   [ 4.9e-01 -1.8e+00 -1.1e-01]
   [ 1.1e+01  1.1e+01  7.8e-01]
   [-1.7e+00 -2.7e+00 -9.5e-01]
   [ 9.1e-01  1.9e+00  8.3e-01]
   [ 6.2e+00  7.7e+00 -5.9e-01]
   [ 8.5e-01  5.5e-01 -3.2e-01]
   [-6.1e+00  4.9e+00  1.0e+00]
   [-9.8e+00 -1.1e+01  4.7e-01]
   [ 6.1e+00 -2.8e+00 -1.7e-01]
   [-1.4e+01 -1.2e+01 -1.1e+00]
   [ 2.0e+00  6.3e+00  4.9e-01]
   [-9.8e+00 -8.4e+00  6.3e-01]
   [ 6.2e+00  7.3e+00 -1.8e+00]
   [-1.4e+01 -3.9e+00 -2.0e+00]
   [-4.0e+00  5.0e+00  2.9e-01]
   [-1.7e+00 -2.7e+00 -9.0e-01]
   [ 7.8e+00  4.0e+00  1.1e-01]
   [ 2.8e+00  2.3e+00 -4.6e-01]
   [-2.7e+00 -7.6e+00 -6.1e-01]
   [ 5.6e+00 -7.7e-01 -9.0e-01]
   [-6.2e+00  4.9e+00  9.9e-01]
   [-1.7e+00 -2.7e+00 -9.2e-01]
   [ 2.0e-01 -4.0e+00 -1.2e-01]
   [-8.1e+00  1.3e+01  9.1e-01]
   [-5.7e+00  3.4e+00  1.5e+00]
   [-4.2e+00  9.8e+00  6.2e-01]
   [-3.5e-01  7.5e+00  8.0e-02]
   [-1.1e+00  8.3e+00  7.9e-02]
   [-4.2e+00 -5.3e+00  1.0e+00]
   [-4.1e-02 -6.1e+00 -6.2e-01]
   [-7.8e+00  1.2e+01  3.7e+00]
   [ 5.0e+00  2.8e+00  1.6e+00]
   [ 6.0e-01  7.5e+00  3.0e-02]
   [-5.7e+00 -8.7e+00 -9.2e-01]
   [ 7.4e+00 -1.8e+00  1.3e-02]
   [ 7.6e+00  4.2e+00  3.0e-01]
   [-1.1e+01 -8.5e+00  2.0e+00]
   [-6.1e+00  4.9e+00  9.7e-01]
   [ 2.6e+00 -6.2e+00 -4.0e-01]
   [-5.3e+00 -6.0e+00  7.4e-02]
   [ 9.1e+00 -1.2e+01 -1.7e+00]
   [ 7.8e+00  4.0e+00  7.7e-02]
   [ 2.5e-01  2.3e+00  2.8e-03]
   [-5.5e+00  4.4e+00  2.4e+00]
   [-1.3e+00 -5.4e+00  9.0e-01]
   [ 1.0e+01 -3.9e+00 -5.0e-01]
   [-1.5e+00 -3.1e+00  2.0e-01]
   [-4.2e+00 -5.3e+00  1.0e+00]
   [ 2.9e+00 -3.4e+00 -1.9e-01]
   [ 6.2e+00  7.3e+00 -1.8e+00]
   [ 2.0e+00 -3.1e+00 -1.4e+00]
   [ 4.7e+00  5.9e+00 -7.2e-01]
   [-7.4e+00 -2.5e-02 -8.8e-02]
   [-5.1e+00  2.8e+00 -7.0e+00]
   [ 7.5e+00 -8.2e-01  1.1e-02]
   [ 2.0e+00  6.3e+00  5.2e-01]
   [ 4.2e+00  2.6e+00  3.7e+00]
   [ 5.3e+00  1.9e+00  2.8e+00]
   [-8.5e+00 -8.3e+00  2.7e+00]
   [ 2.3e-01 -4.0e+00 -1.5e-01]
   [ 8.1e+00  1.5e+00 -8.5e-01]
   [-1.1e-01 -1.9e+00  9.7e-01]
   [-4.0e+00  9.5e+00 -3.5e-01]
   [ 3.7e-02 -5.8e+00 -8.7e-02]
   [-4.8e+00 -5.1e+00  4.5e-01]
   [ 3.7e+00  5.9e-01 -3.9e-01]
   [-6.1e+00  4.9e+00  9.8e-01]
   [ 8.1e+00  3.2e+00 -1.3e+00]
   [ 3.0e+00  1.9e+00  1.6e+00]
   [-3.0e-01 -6.2e+00 -9.7e-01]
   [ 9.8e+00 -4.9e+00 -3.9e-01]
   [ 1.1e+01 -3.8e+00 -2.8e+00]
   [-3.7e+00 -7.3e+00 -1.7e-01]
   [-5.9e+00 -1.5e+01 -4.0e-02]
   [ 6.6e+00  4.4e+00  4.0e-01]
   [-6.0e+00  3.3e+00  9.8e-01]
   [ 1.1e+01  1.0e+01 -2.8e-02]
   [-4.7e+00 -5.1e+00  4.2e-01]
   [-8.3e+00  3.4e+00  6.1e+00]
   [-5.8e+00 -8.6e+00 -8.9e-01]
   [-6.5e+00 -9.0e+00 -1.2e-01]
   [-4.8e+00 -6.8e+00 -1.3e+00]]
# ---
# name: test_load_cellpack[bcif].4
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_load_cellpack[bcif].5
  [[ 1.7e-01  6.7e-01 -6.4e-02 -7.2e-01]
   [ 1.5e-02 -9.9e-01  1.5e-01 -6.4e-02]
   [ 5.9e-01 -2.3e-01 -6.6e-01  4.0e-01]
   [ 2.6e-01  7.7e-01  3.7e-01 -4.6e-01]
   [ 4.4e-01  7.5e-01 -4.8e-01  1.4e-01]
   [ 3.4e-01  5.8e-01  7.0e-01  2.3e-01]
   [ 1.6e-01  6.9e-01 -1.6e-01 -6.9e-01]
   [ 3.9e-01  4.6e-01 -4.1e-01  6.8e-01]
   [ 1.3e-01 -4.5e-01 -8.8e-01 -8.0e-02]
   [ 3.0e-01 -1.6e-02 -5.6e-01  7.7e-01]
   [ 3.1e-01  5.1e-01 -2.0e-01  7.8e-01]
   [ 2.4e-01  8.6e-02  8.7e-01 -4.2e-01]
   [ 6.4e-02  5.1e-01  3.6e-02  8.6e-01]
   [ 9.1e-01 -2.0e-01  2.1e-01  2.8e-01]
   [ 1.1e-01  8.8e-01 -4.1e-02 -4.6e-01]
   [ 3.2e-01 -1.8e-01  7.5e-01 -5.5e-01]
   [ 6.3e-02  4.6e-01  2.5e-01  8.5e-01]
   [ 3.2e-01 -6.1e-01 -4.6e-01 -5.5e-01]
   [ 1.4e-01  2.4e-01 -7.5e-01 -6.0e-01]
   [ 2.6e-01  6.2e-01  5.1e-01 -5.4e-01]
   [ 1.8e-01  6.4e-02 -5.6e-01 -8.1e-01]
   [ 3.3e-01 -6.2e-01 -4.4e-01 -5.7e-01]
   [ 5.0e-02 -2.9e-01 -6.9e-01  6.7e-01]
   [ 2.9e-01  2.0e-01 -5.6e-01  7.5e-01]
   [ 1.9e-01 -9.3e-01 -2.5e-01 -1.8e-01]
   [ 3.1e-01  7.6e-01 -5.7e-01 -4.2e-05]
   [ 6.7e-02  2.2e-01  3.8e-01  9.0e-01]
   [ 3.9e-01  4.6e-01 -4.1e-01  6.8e-01]
   [ 3.4e-02 -3.3e-01 -8.9e-01 -3.1e-01]
   [ 5.9e-01 -7.3e-01 -2.9e-01 -1.9e-01]
   [ 5.4e-01 -1.6e-01 -6.5e-01 -5.0e-01]
   [ 4.4e-02 -1.5e-01 -7.9e-01  5.9e-01]
   [ 7.6e-01  3.8e-01  1.5e-01  5.2e-01]
   [ 1.8e-01  6.4e-02 -5.6e-01 -8.1e-01]
   [ 4.4e-01  3.4e-01 -3.3e-01 -7.6e-01]
   [ 4.7e-01 -3.5e-03 -6.6e-01  5.9e-01]
   [ 4.6e-01  9.0e-02  3.8e-01 -8.0e-01]
   [ 5.2e-02  2.7e-01 -6.6e-01  7.0e-01]
   [ 1.9e-01 -9.3e-01 -2.5e-01 -1.8e-01]
   [ 1.8e-01  6.4e-02 -5.6e-01 -8.1e-01]
   [ 3.2e-01 -1.8e-01  7.5e-01 -5.5e-01]
   [ 8.4e-01  1.4e-01 -5.0e-01 -1.5e-01]
   [ 4.2e-01  6.5e-01 -5.2e-01 -3.5e-01]
   [ 5.2e-01 -6.9e-01 -1.2e-01 -4.8e-01]
   [ 6.4e-01  3.1e-01 -6.4e-01 -3.1e-01]
   [ 3.3e-01 -4.0e-01  1.2e-01  8.5e-01]
   [ 7.6e-01  4.9e-03 -6.4e-01 -1.2e-01]
   [ 2.5e-01  9.6e-01 -3.8e-02 -1.2e-01]
   [ 5.1e-01  1.3e-01 -6.3e-01 -5.6e-01]
   [ 5.3e-01  2.4e-01  8.1e-01 -1.7e-05]
   [ 5.9e-01 -2.3e-01 -6.6e-01  4.0e-01]
   [ 4.4e-01 -8.3e-02  4.7e-01 -7.6e-01]
   [ 1.5e-01 -4.7e-01 -5.7e-01 -6.6e-01]
   [ 6.1e-02 -5.6e-01  1.1e-01  8.2e-01]
   [ 2.1e-01 -3.9e-01 -6.5e-01 -6.1e-01]
   [ 1.9e-01 -9.3e-01 -2.5e-01 -1.8e-01]
   [ 5.3e-02 -4.1e-01  5.6e-01  7.2e-01]
   [ 5.9e-01 -4.3e-02 -8.1e-01 -8.0e-07]
   [ 2.6e-02  4.5e-01  8.5e-01 -2.8e-01]
   [ 4.4e-01  3.4e-01 -3.3e-01 -7.6e-01]
   [ 3.1e-01  4.2e-01  8.1e-01 -2.8e-01]
   [ 7.4e-01  2.8e-01 -5.9e-01 -1.5e-01]
   [ 2.7e-01  6.7e-01 -9.3e-02  6.8e-01]
   [ 3.5e-01 -4.4e-01  7.7e-01 -3.2e-01]
   [ 5.3e-01 -2.0e-01 -4.8e-01  6.7e-01]
   [ 7.6e-01  4.9e-03 -6.4e-01 -1.2e-01]
   [ 1.8e-01 -5.6e-01 -7.7e-01  2.3e-01]
   [ 5.4e-01 -1.6e-01 -6.5e-01 -5.0e-01]
   [ 1.2e-01  8.4e-01  1.6e-01 -5.0e-01]
   [ 2.0e-01 -1.5e-01  5.7e-01  7.8e-01]
   [ 6.8e-01  6.8e-01 -2.1e-01  2.1e-01]
   [ 3.6e-01  1.7e-01 -1.2e-01  9.1e-01]
   [ 1.7e-01  3.9e-01 -5.3e-01 -7.3e-01]
   [ 3.4e-02 -3.3e-01 -8.9e-01 -3.1e-01]
   [ 2.8e-01 -4.8e-01 -8.2e-01 -1.3e-01]
   [ 8.4e-01 -3.5e-01  6.2e-02 -4.0e-01]
   [ 3.0e-01 -2.9e-02 -7.2e-01  6.3e-01]
   [ 3.2e-01 -1.8e-01  7.5e-01 -5.5e-01]
   [ 2.9e-02 -4.9e-01  7.8e-01  3.9e-01]
   [ 2.2e-01 -1.0e-01 -7.8e-01  5.7e-01]
   [ 6.1e-01  6.6e-01 -9.9e-02  4.2e-01]
   [ 9.8e-02  8.1e-01  5.6e-01  1.2e-01]
   [ 9.4e-02 -9.8e-01  1.5e-01  8.2e-02]
   [ 7.9e-01 -4.3e-01  4.4e-01  9.2e-07]
   [ 1.9e-01 -9.3e-01 -2.5e-01 -1.8e-01]
   [ 6.4e-01 -4.1e-01 -2.6e-01 -5.9e-01]
   [ 6.5e-01  3.4e-01  5.1e-01  4.4e-01]
   [ 3.5e-01  5.9e-01 -7.3e-01 -7.0e-06]
   [ 8.2e-01  1.3e-02 -1.3e-01  5.6e-01]
   [ 9.1e-01  1.1e-03 -4.1e-01  9.3e-09]
   [ 2.0e-01  6.8e-01 -2.5e-02  7.0e-01]
   [ 9.7e-01 -2.5e-01 -6.9e-02  5.9e-06]
   [ 4.9e-01 -6.7e-01 -4.5e-01  3.3e-01]
   [ 2.6e-01 -7.0e-01  1.9e-01  6.4e-01]
   [ 3.5e-01  6.4e-01  4.1e-01 -5.5e-01]
   [ 4.3e-02  3.5e-01 -9.3e-01 -1.3e-01]
   [ 1.9e-01 -8.2e-02 -9.7e-01  1.3e-01]
   [ 3.1e-01  5.1e-01 -2.0e-01  7.8e-01]
   [ 7.4e-01 -5.5e-01 -1.9e-01 -3.5e-01]
   [ 9.2e-02 -8.4e-01  3.5e-01 -4.0e-01]]
# ---
# name: test_load_cellpack[bcif].6
  []
# ---
# name: test_load_cellpack[bcif].7
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
# name: test_load_cellpack[cif]
  '''
  0000_Cv0
  0001_Cv1
  0002_Cv10
  0003_Cv11
  0004_Cv12
  0005_Cv13
  0006_Cv2
  0007_Cv3
  0008_Cv4
  0009_Cv5
  0010_Cv6
  0011_Cv7
  0012_Cv8
  0013_Cv9
  0014_Ed0
  0015_Ed1
  0016_Ed2
  0017_Ed3
  0018_Ed4
  0019_Ed5
  0020_Ed6
  0021_Ed7
  0022_Ed8
  0023_Gb0
  0024_Gb1
  0025_Gb2
  0026_Gb3
  0027_Gg01
  0028_Gg02
  0029_Gg03
  0030_Gg04
  0031_Gg11
  0032_Gg12
  0033_Gg13
  0034_Gg14
  0035_Gh01
  0036_Gh02
  0037_Gh03
  0038_Gh04
  0039_Gi01
  0040_Gi02
  0041_Gi03
  0042_Gi04
  '''
# ---
# name: test_load_cellpack[cif].1
  [1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1]
# ---
# name: test_load_cellpack[cif].2
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0
   0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0]
# ---
# name: test_load_cellpack[cif].3
  [11417  1850  9794  5480   866   116  2877 14594 11699  9354  7506  6557
     578  5655  9799  4331 18091  8413 10742 10818 15544  2036  4275 11251
   10994 16828 18060  5549 14594 12834 15576  1913  8538  6868  2036  7167
    8340  5391  9082 16828  2036  4283 16828 13342  6203  2068   997 11735
    4344 14064  7117  9799  4275 10402 11492 13525 16332 10174   715 13321
    7167  5317 12431  8753  6260  7034 11735  2499  1913 10120 15209 10579
    4331  2443 12550  5562  6461 17281  4283  7662  9721  4888  2802 12154
    4497 16332 10529   498  4100  3175   506 13705  6801 11038 14988 13011
   12977  6303  7506  7610]
# ---
# name: test_load_cellpack[cif].4
  [[-2.2e+00  7.8e+00  8.0e-01]
   [-5.7e+00 -1.3e+01 -1.6e+00]
   [ 2.6e+00 -7.3e+00 -3.5e-01]
   [ 5.4e+00  3.0e+00  4.2e+00]
   [ 4.7e+00  3.9e+00  3.3e-01]
   [-3.3e+00  5.8e+00 -3.9e+00]
   [-7.6e+00 -8.7e-01 -3.0e-01]
   [ 1.0e+01  9.5e+00  1.2e+00]
   [-5.5e+00  4.7e+00  9.7e-01]
   [-9.7e+00 -3.8e+00 -1.5e+00]
   [ 4.1e+00  2.2e+00  1.4e+00]
   [-1.4e+01 -4.6e+00 -2.1e+00]
   [-1.9e-01 -2.1e+00  8.6e-01]
   [ 5.9e+00  2.6e+00  1.6e+00]
   [ 2.7e+00 -6.7e+00 -3.8e-01]
   [ 3.5e+00  5.3e+00 -5.8e-01]
   [ 1.2e+01 -9.6e+00  2.1e-02]
   [-3.6e+00  1.1e+01  2.9e-01]
   [-4.2e+00 -5.2e+00 -9.9e-03]
   [-6.4e+00 -2.8e+00 -2.0e+00]
   [ 1.2e+01 -1.1e+01  4.2e+00]
   [-3.6e+00 -6.6e+00 -1.9e+00]
   [ 6.1e+00  7.3e+00 -6.9e-01]
   [ 7.8e+00 -1.0e+00 -3.0e-02]
   [-1.5e+00 -2.5e-01  1.0e-01]
   [ 9.1e+00 -1.2e+01 -1.8e+00]
   [-9.3e+00 -1.1e+01  3.2e-01]
   [ 5.0e+00  8.4e-01  8.8e+00]
   [ 1.0e+01  9.6e+00  1.2e+00]
   [-8.3e+00  1.1e+01  4.1e+00]
   [ 1.2e+01 -9.5e+00  3.7e+00]
   [-5.7e+00 -1.3e+01  4.4e-01]
   [-4.6e+00  1.1e+01  4.7e-02]
   [-9.0e+00  3.7e+00  6.9e+00]
   [-3.6e+00 -6.6e+00 -1.9e+00]
   [-1.7e+00 -3.4e+00 -1.0e+00]
   [-2.4e+00  7.0e+00  8.0e-01]
   [ 5.9e+00  4.0e+00  1.4e+00]
   [ 6.8e+00  3.6e-01 -3.3e-02]
   [ 9.1e+00 -1.2e+01 -1.8e+00]
   [-3.6e+00 -6.6e+00 -1.9e+00]
   [ 5.8e+00  6.8e+00 -9.0e-01]
   [ 9.1e+00 -1.2e+01 -1.8e+00]
   [-1.1e+01 -1.0e+01 -5.1e-02]
   [-6.1e+00 -1.1e+01  1.4e-01]
   [-2.9e+00 -5.4e+00 -4.3e-01]
   [ 4.7e+00  3.0e+00  5.5e+00]
   [ 1.6e+00  5.6e+00 -3.5e-01]
   [ 3.5e+00  6.6e+00 -1.6e-01]
   [ 2.5e+00  4.6e+00 -9.0e-01]
   [-5.3e+00 -3.2e+00  1.4e-01]
   [ 2.7e+00 -6.7e+00 -4.2e-01]
   [ 6.1e+00  7.3e+00 -7.4e-01]
   [-1.8e+00  4.9e+00 -2.5e+00]
   [-4.4e+00  1.1e+01 -2.9e-01]
   [-7.8e+00 -8.3e+00  2.2e+00]
   [ 9.6e+00  9.3e+00  1.8e+00]
   [ 4.9e+00  1.0e+01 -2.1e+00]
   [ 6.3e-01 -2.2e+00  7.0e-02]
   [-1.2e+01 -1.0e+01  6.8e-01]
   [-1.7e+00 -3.4e+00 -9.9e-01]
   [ 1.6e+00  4.3e+00  1.9e-01]
   [ 1.0e+01  9.0e+00  1.9e+00]
   [-6.8e+00  4.2e+00 -6.1e+00]
   [-5.9e+00 -1.4e+01  4.8e-01]
   [-7.5e+00  1.0e+00 -2.0e-01]
   [ 1.6e+00  5.6e+00 -3.4e-01]
   [-8.7e+00  2.6e+00  5.9e-01]
   [-5.7e+00 -1.3e+01  4.9e-01]
   [ 7.4e+00  4.1e+00  4.2e-01]
   [-1.4e+01 -1.2e+01 -5.6e-01]
   [ 6.8e+00  1.3e+00 -4.5e-01]
   [ 3.4e+00  5.3e+00 -6.1e-01]
   [-6.0e+00 -2.1e+00  3.2e-02]
   [ 1.1e+01  9.9e+00 -5.3e-02]
   [ 5.0e+00  2.0e+00  8.4e+00]
   [-8.4e+00 -3.2e+00 -1.4e+00]
   [-1.4e+01 -1.1e+01 -9.9e-01]
   [ 5.7e+00  6.9e+00 -9.4e-01]
   [ 4.2e+00 -3.6e+00 -8.4e-01]
   [-1.3e+00 -2.9e+00  6.8e-02]
   [-5.2e+00  3.1e+00 -5.8e+00]
   [-9.1e+00  1.2e+00  1.1e+00]
   [-6.9e+00 -9.2e+00  9.8e-01]
   [-4.5e+00  9.2e+00  4.3e-01]
   [ 9.6e+00  9.3e+00  1.8e+00]
   [ 5.2e+00  3.1e+00  4.5e+00]
   [ 8.9e-02  2.7e+00  4.7e-01]
   [ 7.2e+00  4.2e+00  3.8e-01]
   [ 2.9e-02 -5.9e+00 -5.5e-01]
   [ 2.2e-01  2.3e+00 -7.3e-03]
   [ 9.1e+00 -1.2e+01 -1.7e+00]
   [-9.3e+00  2.3e+00  1.3e+00]
   [-2.3e+00 -6.8e+00 -1.2e+00]
   [-1.0e+01  1.1e+01  6.6e-01]
   [-8.5e+00  1.2e+01 -8.0e-01]
   [-8.9e+00  1.2e+01 -9.8e-02]
   [-6.4e+00 -8.9e+00 -1.1e-01]
   [ 4.1e+00  2.2e+00  1.4e+00]
   [ 2.4e+00 -4.1e+00  1.1e+00]]
# ---
# name: test_load_cellpack[cif].5
  [ True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True  True  True  True  True  True  True  True  True
    True  True  True  True]
# ---
# name: test_load_cellpack[cif].6
  [[ 6.8e-01  4.6e-02 -5.7e-01  4.6e-01]
   [ 4.5e-02  1.7e-01 -7.7e-01  6.1e-01]
   [ 2.3e-01  3.9e-01  6.6e-01  6.0e-01]
   [ 9.0e-01 -3.1e-01 -8.9e-02  2.8e-01]
   [ 9.9e-01  5.0e-04 -1.4e-01  0.0e+00]
   [ 2.0e-01 -7.5e-01 -5.7e-01  2.6e-01]
   [ 1.7e-01  9.5e-01  2.4e-01 -8.1e-02]
   [ 8.2e-01 -2.8e-01  2.8e-02  4.9e-01]
   [ 4.3e-01  5.2e-01  5.1e-01 -5.3e-01]
   [ 6.0e-02 -5.3e-01 -2.3e-01  8.1e-01]
   [ 3.3e-01  3.1e-01  7.9e-01  4.2e-01]
   [ 4.0e-01  4.9e-01  3.5e-01 -6.9e-01]
   [ 6.0e-01  7.4e-01 -3.0e-01 -1.3e-05]
   [ 6.2e-02  5.4e-01 -2.6e-02  8.4e-01]
   [ 5.5e-01 -6.3e-01  4.0e-01  3.8e-01]
   [ 4.5e-01 -6.3e-01  2.9e-01  5.6e-01]
   [ 5.8e-01  7.1e-01 -4.1e-01  5.1e-05]
   [ 1.1e-01 -3.4e-01 -8.1e-01 -4.6e-01]
   [ 5.3e-02 -5.9e-01  3.7e-01  7.2e-01]
   [ 4.3e-01 -4.9e-01 -1.8e-01 -7.4e-01]
   [ 5.0e-01  3.2e-02  3.5e-02 -8.7e-01]
   [ 1.7e-01 -6.4e-01 -2.2e-01 -7.2e-01]
   [ 3.1e-01  6.7e-01  4.2e-01 -5.3e-01]
   [ 5.3e-01 -3.8e-01 -5.8e-01 -4.9e-01]
   [ 3.8e-01 -6.0e-01  6.9e-01  1.2e-01]
   [ 1.6e-01 -3.8e-01 -8.1e-01  4.0e-01]
   [ 7.1e-01 -5.3e-01  4.7e-01 -7.2e-05]
   [ 5.7e-01 -3.8e-01 -5.0e-01 -5.3e-01]
   [ 8.2e-01 -2.8e-01  2.8e-02  4.9e-01]
   [ 1.5e-01  4.3e-01  6.3e-01 -6.3e-01]
   [ 6.1e-01  8.5e-02 -3.0e-01 -7.3e-01]
   [ 5.4e-01 -8.0e-01 -1.0e-02 -2.6e-01]
   [ 4.4e-01  8.0e-01  3.5e-01 -2.1e-01]
   [ 8.5e-01  3.8e-01 -2.6e-01  2.6e-01]
   [ 1.7e-01 -6.4e-01 -2.2e-01 -7.2e-01]
   [ 5.3e-01 -5.8e-01 -3.8e-01 -4.9e-01]
   [ 4.1e-02  2.1e-01 -8.0e-01  5.6e-01]
   [ 3.2e-01  5.0e-01  5.0e-02  8.1e-01]
   [ 6.3e-01  6.5e-01  3.0e-01 -3.0e-01]
   [ 1.6e-01 -3.8e-01 -8.1e-01  4.0e-01]
   [ 1.7e-01 -6.4e-01 -2.2e-01 -7.2e-01]
   [ 1.8e-01 -2.3e-01 -8.4e-01  4.5e-01]
   [ 1.6e-01 -3.8e-01 -8.1e-01  4.0e-01]
   [ 1.1e-01  3.9e-02  5.8e-01  8.1e-01]
   [ 3.7e-01  1.9e-01 -7.8e-01  4.7e-01]
   [ 4.8e-01  1.9e-01 -2.4e-01 -8.2e-01]
   [ 2.1e-01  1.6e-01  2.8e-01 -9.2e-01]
   [ 7.2e-01 -2.5e-01 -6.4e-01  9.1e-02]
   [ 3.2e-01 -1.8e-01  4.3e-01  8.2e-01]
   [ 3.0e-01  7.7e-01  5.6e-01  9.8e-03]
   [ 4.2e-01 -2.2e-01  8.6e-01 -2.0e-01]
   [ 5.5e-01 -6.3e-01  4.0e-01  3.8e-01]
   [ 3.1e-01  6.7e-01  4.2e-01 -5.3e-01]
   [ 7.3e-02  1.2e-01  1.6e-01  9.8e-01]
   [ 5.1e-01  5.9e-01  5.7e-01 -2.5e-01]
   [ 5.6e-01  3.7e-01  5.4e-01 -5.1e-01]
   [ 5.2e-01 -3.3e-01  3.2e-01 -7.2e-01]
   [ 3.1e-01 -2.4e-01  7.4e-01 -5.4e-01]
   [ 1.9e-01 -4.1e-01  7.6e-01  4.7e-01]
   [ 5.1e-01  6.8e-02  6.1e-01  6.0e-01]
   [ 5.3e-01 -5.8e-01 -3.8e-01 -4.9e-01]
   [ 4.4e-01 -1.3e-01  7.0e-01  5.5e-01]
   [ 6.1e-01  2.9e-02  2.3e-01  7.6e-01]
   [ 3.3e-01 -7.8e-01  5.2e-01  1.0e-01]
   [ 5.7e-02  6.6e-02  6.4e-01  7.6e-01]
   [ 9.0e-01  4.3e-01 -1.1e-03 -3.8e-08]
   [ 7.2e-01 -2.5e-01 -6.4e-01  9.1e-02]
   [ 4.2e-01  5.3e-01 -6.7e-02 -7.3e-01]
   [ 5.4e-01 -8.0e-01 -1.0e-02 -2.6e-01]
   [ 8.1e-01 -1.6e-01 -5.7e-01 -1.1e-07]
   [ 5.1e-01 -8.3e-01 -2.2e-01  8.4e-02]
   [ 8.2e-01  5.1e-01 -2.7e-01 -2.3e-06]
   [ 4.5e-01 -6.3e-01  2.9e-01  5.6e-01]
   [ 7.6e-01 -4.0e-01 -5.3e-02  5.2e-01]
   [ 5.8e-01  6.5e-01 -1.8e-01  4.5e-01]
   [ 1.5e-01 -8.4e-02  9.1e-01  3.8e-01]
   [ 3.5e-01 -4.8e-01 -6.7e-01  4.4e-01]
   [ 2.1e-02 -3.9e-01  9.0e-01 -1.7e-01]
   [ 1.8e-01 -2.3e-01 -8.4e-01  4.5e-01]
   [ 6.4e-01  6.2e-02  6.2e-01  4.4e-01]
   [ 2.0e-01  4.7e-01  9.9e-02 -8.6e-01]
   [ 9.5e-01 -2.7e-01 -1.4e-01  9.5e-06]
   [ 3.3e-01  3.3e-01 -8.7e-01 -1.6e-01]
   [ 2.1e-01  2.9e-01  6.6e-01  6.6e-01]
   [ 4.1e-01 -5.0e-01 -3.1e-01 -7.0e-01]
   [ 5.2e-01 -3.3e-01  3.2e-01 -7.2e-01]
   [ 9.6e-01 -1.5e-01 -2.4e-01  8.1e-06]
   [ 3.9e-01  8.0e-01 -4.4e-01  1.2e-01]
   [ 5.4e-02 -6.6e-01  1.4e-01  7.3e-01]
   [ 2.6e-02 -1.5e-01 -9.2e-01  3.5e-01]
   [ 3.8e-01  6.5e-01  6.4e-01 -1.8e-01]
   [ 2.0e-01  2.4e-01 -9.4e-01  1.3e-01]
   [ 7.1e-02 -2.0e-01 -2.3e-01  9.5e-01]
   [ 6.4e-01  4.8e-01 -6.2e-02 -5.9e-01]
   [ 3.9e-01  5.7e-01 -8.9e-02  7.2e-01]
   [ 6.8e-01  2.3e-01  1.7e-01  6.8e-01]
   [ 2.1e-01 -7.3e-01 -6.5e-01 -2.7e-02]
   [ 5.1e-01 -3.0e-01  4.9e-01  6.4e-01]
   [ 3.3e-01  3.1e-01  7.9e-01  4.2e-01]
   [ 5.3e-02  1.6e-01 -6.8e-01  7.1e-01]]
# ---
# name: test_load_cellpack[cif].7
  []
# ---
# name: test_load_cellpack[cif].8
  "['Cv0', 'Cv1', 'Cv10', 'Cv11', 'Cv12', 'Cv13', 'Cv2', 'Cv3', 'Cv4', 'Cv5', 'Cv6', 'Cv7', 'Cv8', 'Cv9', 'Ed0', 'Ed1', 'Ed2', 'Ed3', 'Ed4', 'Ed5', 'Ed6', 'Ed7', 'Ed8', 'Gb0', 'Gb1', 'Gb2', 'Gb3', 'Gg01', 'Gg02', 'Gg03', 'Gg04', 'Gg11', 'Gg12', 'Gg13', 'Gg14', 'Gh01', 'Gh02', 'Gh03', 'Gh04', 'Gi01', 'Gi02', 'Gi03', 'Gi04']"
# ---
